--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-firebase/analytics": "^14.11.0",
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
@@ -30,7 +31,6 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
