--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-firebase/analytics": "^14.11.0",
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-native-firebase/storage": "^15.1.0",
+    "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
@@ -25,7 +28,9 @@
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-picker": "^4.8.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
