--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-date-picker": "^4.2.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-picker": "^4.8.4",
     "react-native-linear-gradient": "^2.5.6",
@@ -34,6 +36,7 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
