--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,5 +51,9 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+         // ADD THIS
+         maven { url 'https://maven.google.com' }
+         // ADD THIS
+         maven { url "https://www.jitpack.io" }
     }
 }
