--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
     "react": "17.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.8.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-picker-select": "^8.0.4",
