--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-country-region-selector": "^3.4.0",
     "react-native": "0.68.2",
