--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
-    "@react-native-firebase/storage": "^15.1.0",
+    "@react-native-firebase/storage": "^15.4.0",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.8.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.8.0",
